fix: 메소드 및 메소드명 수정, 테스트 코드 추가